# rust-project-template

./: .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
