[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["Tongyi Li <litongyi1999@qq.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
base64 = "0.22.0"
blake3 = "1.5.1"
chacha20poly1305 = { version = "0.10.1", features = ["std", "stream"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "fs", "macros", "net"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "2.2.2"
